--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/lucasborges24/projeto12-batepapo-uol-api#readme",
   "dependencies": {
+    "assert": "^2.0.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.3",
     "dotenv": "^16.0.1",
